--- a/Hate Speech Detecton.ipynb
+++ b/Hate Speech Detecton.ipynb
@@ -26,12 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6b0fe66b-f9e9-40ed-8e1f-1d39b092a32c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing all the modules \n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib\n",
@@ -39,7 +38,7 @@
     "import seaborn as sns\n",
     "import nltk\n",
     "import re\n",
-    "import string   #remove the Punctuation\n",
+    "import string  \n",
     "from nltk.corpus import stopwords\n",
     "import sklearn\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "decdd1c4-0299-4d6c-a6c4-3c94622aae87",
    "metadata": {},
    "outputs": [
@@ -270,7 +269,6 @@
     }
    ],
    "source": [
-    "# reading data\n",
     "dataset = pd.read_csv(\"Datasets//labeled_data.csv\")\n",
     "dataset"
    ]
@@ -496,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "582a7a2c-d337-4916-bdf5-ff4d3075b777",
    "metadata": {},
    "outputs": [
@@ -522,13 +520,13 @@
     }
    ],
    "source": [
-    "# showing dataset information\n",
+    "\n",
     "dataset.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a225f2c5-a006-4f7a-94fb-8e4f9de72b7b",
    "metadata": {},
    "outputs": [
@@ -666,7 +664,7 @@
     }
    ],
    "source": [
-    "# describing the dataset\n",
+    "\n",
     "dataset.describe()"
    ]
   },
@@ -869,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cf8d99ce-c2c3-45dd-85ef-015ed4614b57",
    "metadata": {},
    "outputs": [
@@ -1067,14 +1065,14 @@
     }
    ],
    "source": [
-    "# making labels data according to class to train the model\n",
+    "\n",
     "dataset[\"labels\"] = dataset[\"class\"].map({0:\"Hate Speech\", 1:\"Offensive Language\", 2:\"Neither\"})\n",
     "dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0082b0ef-348b-42eb-a794-78a4db926ae2",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1088,7 @@
     }
    ],
    "source": [
-    "# graphical view of datasets\n",
+    "\n",
     "plt.subplots(figsize=(6,5)) \n",
     "sns.countplot(x='labels',data=dataset)\n",
     "plt.show()"
@@ -1217,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e571cd1e-206c-4b6d-a364-17aa254aa632",
    "metadata": {},
    "outputs": [
@@ -1242,26 +1240,26 @@
     }
    ],
    "source": [
-    "# downloading the stopwords from NLTK\n",
+    "\n",
     "nltk.download(\"stopwords\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "35fcd132-193a-4309-80eb-e80440265f00",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# set the stopwords language \n",
+    " \n",
     "stopwords = set(stopwords.words(\"english\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "cd2919b8-19f3-4391-87e6-de0c0139b015",
    "metadata": {
     "scrolled": true
@@ -1457,24 +1455,24 @@
     }
    ],
    "source": [
-    "# Showing the stopwords \n",
+    " \n",
     "stopwords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "3fe0fa3c-6e3f-434f-9b41-7f40dd58f700",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set the stemming language \n",
+    "\n",
     "stemming = nltk.SnowballStemmer(\"english\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5a512956-afa4-4cf4-b8e3-591f5cfbb5f1",
    "metadata": {},
    "outputs": [
@@ -1498,7 +1496,7 @@
     }
    ],
    "source": [
-    "# making the text cleaning model\n",
+    "\n",
     "def cleaning(text):\n",
     "    text = str(text).lower()\n",
     "    text = re.sub(\"https?://\\S+|www\\.\\S+\", \"\", text)\n",
@@ -1509,11 +1507,9 @@
     "    text = re.sub(\"\\w*\\d\\w*\", \"\", text)\n",
     "    text = re.sub(\"rt\", \"\", text)\n",
     "\n",
-    "    # stopwords processing\n",
     "    text = [word for word in text.split(\" \") if word not in stopwords]\n",
     "    text = \" \".join(text)\n",
     "\n",
-    "    # stemming processing\n",
     "    text = [stemming.stem(word) for word in text.split(\" \")]\n",
     "    text = \" \".join(text)\n",
     "    return text"
@@ -1521,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "f255804c-9ad0-4d76-ab33-f7deeff3f733",
    "metadata": {
     "scrolled": true
@@ -1541,7 +1537,7 @@
     }
    ],
    "source": [
-    "# apply the cleaning model\n",
+    "\n",
     "data[\"tweet\"] = data[\"tweet\"].apply(cleaning)"
    ]
   },
@@ -1665,12 +1661,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "60f763a8-2338-41ed-87ab-dbeaeb27bce4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# splitting the data X and y\n",
+    "\n",
     "X = np.array(data[\"tweet\"])\n",
     "y = np.array(data[\"labels\"])"
    ]
@@ -1739,12 +1735,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "51af7b58-1422-4adc-8a32-2ebdb0bb7c9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feature exraction model\n",
+    "\n",
     "cv = CountVectorizer()\n",
     "X = cv.fit_transform(X)"
    ]
@@ -1773,12 +1769,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "2a58a0a5-1f77-44d6-a42b-3bfa0e92079e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset training model\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.33, random_state = 42)"
    ]
   },
@@ -1818,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b94fcf93-8ed9-407a-87c7-9c884b9aa914",
    "metadata": {},
    "outputs": [
@@ -2241,14 +2237,14 @@
     }
    ],
    "source": [
-    "# ML model\n",
+    "\n",
     "dt = DecisionTreeClassifier()\n",
     "dt.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "58c0a7ea-3bce-4862-be71-faac1d485521",
    "metadata": {},
    "outputs": [
@@ -2266,14 +2262,14 @@
     }
    ],
    "source": [
-    "# predicting the model\n",
+    "\n",
     "y_pred = dt.predict(X_test)\n",
     "y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "63954122-d4bd-41d5-9026-844bbf9c483a",
    "metadata": {},
    "outputs": [
@@ -2291,14 +2287,14 @@
     }
    ],
    "source": [
-    "# Finding the confusion imatrix\n",
+    "\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "cm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "5d9fead9-40f9-4b2b-b88f-3d59e2099367",
    "metadata": {},
    "outputs": [
@@ -2324,13 +2320,13 @@
     }
    ],
    "source": [
-    "# heatmap to proper understanding the data\n",
+    "\n",
     "sns.heatmap(cm, annot = True, fmt = \".2f\", cmap = \"YlGnBu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "96ced7e3-062d-485a-9d0e-6183e15726a7",
    "metadata": {},
    "outputs": [
@@ -2346,14 +2342,14 @@
     }
    ],
    "source": [
-    "# Finding the accuracy score\n",
+    "\n",
     "score = accuracy_score(y_test,y_pred)\n",
     "score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "74a32875-c8bb-4043-a91d-fb141667160a",
    "metadata": {},
    "outputs": [
@@ -2375,13 +2371,13 @@
     }
    ],
    "source": [
-    "# Finding the classification report\n",
+    "\n",
     "print(classification_report(y_test,y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "9799c35a-0727-457e-bd3d-ea49d1b9db51",
    "metadata": {},
    "outputs": [
@@ -2395,12 +2391,12 @@
     }
    ],
    "source": [
-    "# Overall Model\n",
+    "\n",
     "sample = input(\"Enter any sentence: \")\n",
-    "data2 = cleaning(sample)       # cleaning data\n",
+    "data2 = cleaning(sample)  \n",
     "print(\"Cleaning the sentence: \", data2)\n",
     "\n",
-    "data2 = cv.transform([data2]).toarray()     # vectorize the sentence\n",
+    "data2 = cv.transform([data2]).toarray()    \n",
     "result = dt.predict(data2)\n",
     "print(result)"
    ]
